--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,5 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.1'
     implementation 'androidx.activity:activity-ktx:1.9.3'
+    implementation 'androidx.activity:activity:1.9.3'
 }
