--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,22 +50,22 @@ dependencies {
 
     implementation 'androidx.work:work-runtime:2.10.0'
     implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'androidx.credentials:credentials:1.3.0'
+    implementation 'androidx.credentials:credentials:1.5.0'
     implementation 'androidx.preference:preference-ktx:1.2.1'
-    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation 'androidx.recyclerview:recyclerview:1.4.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.7'
-    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7'
-    implementation 'androidx.credentials:credentials-play-services-auth:1.3.0'
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01'
+    implementation 'androidx.credentials:credentials-play-services-auth:1.5.0'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-beta01'
 
     implementation 'com.google.maps.android:android-maps-utils:3.8.0'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'com.google.android.libraries.identity.googleid:googleid:1.1.1'
 
     implementation 'com.google.android.gms:play-services-base:18.5.0'
-    implementation 'com.google.android.gms:play-services-auth:21.2.0'
-    implementation 'com.google.android.gms:play-services-maps:19.0.0'
+    implementation 'com.google.android.gms:play-services-auth:21.3.0'
+    implementation 'com.google.android.gms:play-services-maps:19.1.0'
     implementation "com.google.android.gms:play-services-basement:18.5.0"
 
     // Keep BOM at 32.6 so that API 21 (Android 5) devices are supported
@@ -77,6 +77,6 @@ dependencies {
 
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.1'
-    implementation 'androidx.activity:activity-ktx:1.9.3'
-    implementation 'androidx.activity:activity:1.10.0'
+    implementation 'androidx.activity:activity-ktx:1.10.1'
+    implementation 'androidx.activity:activity:1.10.1'
 }
