--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,16 +37,28 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+
+        // For AGP 4.1+
+        // isCoreLibraryDesugaringEnabled = true
+        // For AGP 4.0
+        coreLibraryDesugaringEnabled = true
+
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '17'
+        jvmTarget = '1.8'
     }
     namespace 'de.eloc.eloc_control_panel'
 }
 
 dependencies {
+    // For AGP 7.4+
+    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:2.1.5")
+    // For AGP 7.3
+    // coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.2.3")
+    // For AGP 4.0 to 7.2
+    // coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.9")
 
     implementation 'androidx.work:work-runtime:2.10.0'
     implementation 'androidx.appcompat:appcompat:1.7.0'
@@ -63,10 +75,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'com.google.android.libraries.identity.googleid:googleid:1.1.1'
 
-    implementation 'com.google.android.gms:play-services-base:18.5.0'
+    implementation 'com.google.android.gms:play-services-base:18.7.0'
     implementation 'com.google.android.gms:play-services-auth:21.3.0'
-    implementation 'com.google.android.gms:play-services-maps:19.1.0'
-    implementation "com.google.android.gms:play-services-basement:18.5.0"
+    implementation 'com.google.android.gms:play-services-maps:19.2.0'
+    implementation "com.google.android.gms:play-services-basement:18.7.0"
 
     // Keep BOM at 32.6 so that API 21 (Android 5) devices are supported
     //noinspection GradleDependency
@@ -78,5 +90,5 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.1'
     implementation 'androidx.activity:activity-ktx:1.10.1'
-    implementation 'androidx.activity:activity:1.10.1'
+    implementation 'androidx.activity:activity-ktx:1.10.1'
 }
